--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         <div class="hero-container">
             <picture>
                 <!-- Imágenes optimizadas para diferentes breakpoints -->
-                <source media="(min-width: 1200px)" srcset="images/banner-large.jpg">
-                <source media="(min-width: 768px)" srcset="images/banner-medium.jpg">
-                <source media="(min-width: 480px)" srcset="images/banner-small.jpg">
+                <source media="(min-width: 1200px)" srcset="images/banner-large.jpg" type="image/jpeg">
+                <source media="(min-width: 768px)" srcset="images/banner-medium.jpg" type="image/jpeg">
+                <source media="(max-width: 767px)" srcset="images/banner-small.jpg" type="image/jpeg">
                 <!-- Imagen por defecto -->
                 <img src="images/banner-large.jpg" alt="El Oso - Cervezas Artesanales, Salsas Picantes y Conservas Caseras" class="hero-image">
             </picture>
