--- a/index.html
+++ b/index.html
@@ -563,17 +563,11 @@
                     </div>
                     
                     <!-- Envío y Promociones -->
-                    <div class="shipping-promo-mobile">
-                        <div class="shipping-info-mobile">
-                            <i class="fas fa-shipping-fast"></i>
-                            <span>Envío gratis en compras > $15.000</span>
-                        </div>
-                        <div class="promo-badge-mobile">
-                            <i class="fas fa-bolt"></i>
-                            <span>Oferta especial</span>
-                        </div>
+                    <div class="free-shipping-info">
+                        <i class="fas fa-shipping-fast"></i>
+                        <span>Envío gratis en Quilmes en compras > $15.000</span>
                     </div>
-                    
+
                     <!-- Cantidad -->
                     <div class="quantity-section-mobile">
                         <div class="quantity-label-mobile">Cantidad:</div>
