--- a/index.html
+++ b/index.html
@@ -290,6 +290,41 @@
         </div>
     </section>
 
+    <!-- Sección de Envío Gratis Compacta - Verde con Desplazamiento -->
+    <section class="compact-shipping-banner">
+        <div class="container">
+            <div class="compact-shipping-content">
+                <!-- Texto fijo ENVÍO GRATIS -->
+                <div class="shipping-fixed">
+                    <i class="fas fa-shipping-fast"></i>
+                    <span>ENVÍO GRATIS</span>
+                </div>
+                
+                <!-- Información en desplazamiento -->
+                <div class="shipping-scroll-container">
+                    <div class="shipping-scroll-content">
+                        <div class="scroll-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Quilmes y Zonas Aledañas</span>
+                        </div>
+                        <div class="scroll-item">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>Jueves y Viernes</span>
+                        </div>
+                        <div class="scroll-item">
+                            <i class="fas fa-tag"></i>
+                            <span>Compra Mínima: $15.000</span>
+                        </div>
+                        <div class="scroll-item">
+                            <i class="fas fa-clock"></i>
+                            <span id="compactShippingCountdown">Próximo envío: 00:00:00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Why Choose Us Button -->
     <section class="why-choose-button-section">
         <div class="container">
