--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
     ]
     }
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K21FSGK2ZY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-K21FSGK2ZY');
+    </script>
+
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="TU_CODIGO_DE_VERIFICACION">
 </head>
 <body>
     <!-- WhatsApp Float Button with Menu -->
