--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </button>
                     
                     <a href="#" class="logo">
-                        <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'">
+                        <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
                         <span>EL OSO</span>
                     </a>
                     
@@ -224,7 +224,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-header">
             <div class="mobile-logo">
-                <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'">
+                <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
                 <span>EL OSO</span>
             </div>
             <button class="close-menu" id="closeMenu">
@@ -914,7 +914,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'">
+                        <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'" width="32" height="32">
                         <span>EL OSO</span>
                     </div>
                     <p>Cervezas artesanales, salsas picantes y conservas caseras de la mejor calidad.</p>
