--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="El Oso - Cervezas artesanales premium, salsas picantes y conservas caseras en Quilmes. Envío gratis los jueves y viernes. Ofertas exclusivas y productos de calidad.">
     <title>El Oso | Cervezas Artesanales • Salsas Picantes • Conservas</title>
 
     <!-- Idioma específico -->
