--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-AR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="El Oso - Cervezas artesanales premium, salsas picantes y conservas caseras en Quilmes. Envío gratis los jueves y viernes. Ofertas exclusivas y productos de calidad.">
     <title>El Oso | Cervezas Artesanales • Salsas Picantes • Conservas</title>
-    <!-- Idioma específico -->
-    <html lang="es-AR">
 
     <!-- Open Graph para redes sociales -->
     <meta property="og:title" content="El Oso | Cervezas Artesanales • Salsas Picantes • Conservas">
@@ -36,7 +34,7 @@
     "@type": "LocalBusiness",
     "name": "El Oso",
     "description": "Cervezas artesanales premium, salsas picantes y conservas caseras en Quilmes",
-    "url": "https://tudominio.com",
+    "url": "https://eloso.ar",
     "telephone": "+5491123495971",
     "address": {
         "@type": "PostalAddress",
