--- a/index.html
+++ b/index.html
@@ -149,20 +149,20 @@
         <div class="header-top">
             <div class="container">
                 <div class="header-content">
-                    <button class="menu-toggle" id="menuToggle">
+                    <button class="menu-toggle" id="menuToggle" alt="Menú">
                         <i class="fas fa-bars"></i>
                     </button>
                     
                     <a href="#" class="logo">
-                        <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
+                        <img src="images/logo-blanco.png" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
                         <span>EL OSO</span>
                     </a>
                     
                     <div class="header-actions">
-                        <button class="search-toggle" id="searchToggle">
+                        <button class="search-toggle" id="searchToggle" alt="Buscar">
                             <i class="fas fa-search"></i>
                         </button>
-                        <button class="cart-toggle temu-cart-toggle" id="cartToggle">
+                        <button class="cart-toggle temu-cart-toggle" id="cartToggle" alt="Carrito">
                             <i class="fas fa-shopping-cart"></i>
                             <span class="cart-count">0</span>
                             <div class="cart-pulse"></div>
@@ -178,7 +178,7 @@
                 <div class="search-container">
                     <i class="fas fa-search search-icon"></i>
                     <input type="text" id="searchInput" placeholder="Buscar cervezas, salsas, conservas...">
-                    <button class="search-close" id="searchClose">
+                    <button class="search-close" id="searchClose" alr="Cerrar">
                         <i class="fas fa-times"></i>
                     </button>
                 </div>
@@ -222,10 +222,10 @@
     <div class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-header">
             <div class="mobile-logo">
-                <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
+                <img src="images/logo-blanco.png" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
                 <span>EL OSO</span>
             </div>
-            <button class="close-menu" id="closeMenu">
+            <button class="close-menu" id="closeMenu" alt="Cerrar">
                 <i class="fas fa-times"></i>
             </button>
         </div>
