--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="header-top">
             <div class="container">
                 <div class="header-content">
-                    <button class="menu-toggle" id="menuToggle" alt="Menú">
+                    <button class="menu-toggle" id="menuToggle">
                         <i class="fas fa-bars"></i>
                     </button>
                     
@@ -159,10 +159,10 @@
                     </a>
                     
                     <div class="header-actions">
-                        <button class="search-toggle" id="searchToggle" alt="Buscar">
+                        <button class="search-toggle" id="searchToggle">
                             <i class="fas fa-search"></i>
                         </button>
-                        <button class="cart-toggle temu-cart-toggle" id="cartToggle" alt="Carrito">
+                        <button class="cart-toggle temu-cart-toggle" id="cartToggle">
                             <i class="fas fa-shopping-cart"></i>
                             <span class="cart-count">0</span>
                             <div class="cart-pulse"></div>
@@ -225,7 +225,7 @@
                 <img src="images/logo-blanco.png" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
                 <span>EL OSO</span>
             </div>
-            <button class="close-menu" id="closeMenu" alt="Cerrar">
+            <button class="close-menu" id="closeMenu">
                 <i class="fas fa-times"></i>
             </button>
         </div>
@@ -912,7 +912,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="images/logo-blanco.png" alt="El Oso" class="logo-img" onerror="this.style.display='none'" width="32" height="32">
+                        <img src="images/logo-blanco.png" class="logo-img" onerror="this.style.display='none'" width="32" height="32">
                         <span>EL OSO</span>
                     </div>
                     <p>Cervezas artesanales, salsas picantes y conservas caseras de la mejor calidad.</p>
