--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </button>
                     
                     <a href="#" class="logo">
-                        <img src="images/logo-blanco.png" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
+                        <img src="images/logo-blanco.png" class="logo-img" alt="" onerror="this.style.display='none'" width="24" height="24">
                         <span>EL OSO</span>
                     </a>
                     
@@ -222,7 +222,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-header">
             <div class="mobile-logo">
-                <img src="images/logo-blanco.png" class="logo-img" onerror="this.style.display='none'" width="24" height="24">
+                <img src="images/logo-blanco.png" class="logo-img" alt="" onerror="this.style.display='none'" width="24" height="24">
                 <span>EL OSO</span>
             </div>
             <button class="close-menu" id="closeMenu" alt="">
