--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://wa.me">
+    <link rel="preconnect" href="https://api.allorigins.win">
+    <link rel="preconnect" href="https://corsproxy.io">
+    <link rel="preconnect" href="https://cors-anywhere.herokuapp.com">
+    <link rel="preconnect" href="https://www.google-analytics.com">
+    <link rel="preconnect" href="https://docs.google.com">
 
     <!-- Open Graph para redes sociales -->
     <meta property="og:title" content="El Oso | Cervezas Artesanales • Salsas Picantes • Conservas">
