--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>El Oso | Cervezas Artesanales • Salsas Picantes • Conservas</title>
 
     <!-- Preconexión temprana a recursos críticos -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://wa.me">
     <link rel="preconnect" href="https://api.allorigins.win">
@@ -35,7 +36,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles.min.css?v=1.2">
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <script type="application/ld+json">
     {
