--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <meta name="ICBM" content="-34.720, -58.258">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.css?v=2">
-    
+    <link rel="stylesheet" href="styles.min.css?v=2">
+
     <!-- Preload para Font Awesome con carga optimizada -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -820,6 +820,6 @@
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
 
-    <script src="scripts.js?v=2"></script>
+    <script src="scripts.min.js?v=2"></script>
 </body>
 </html>
