--- a/test.html
+++ b/test.html
@@ -56,6 +56,11 @@
     </div>
 
     <!-- Ruleta de Descuentos -->
+    <button class="hero-cta secondary hide" onclick="openRuletaModal()">
+        <i class="fas fa-gift"></i>
+        Girar Ruleta de Descuentos
+    </button>
+
     <div class="ruleta-modal" id="ruletaModal">
         <div class="modal-content">
             <div class="modal-header">
