--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="ICBM" content="-34.720, -58.258">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.min.css?v=9">
+    <link rel="stylesheet" href="styles.css?v=10">
 
     <!-- Preload -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -254,50 +254,43 @@
             </div>
         </section>
 
-        <!-- Envío Gratis Compacta -->
-        <section class="compact-shipping-banner" aria-label="Información de envío gratis">
+        <!-- Envío Gratis -->
+        <section class="compact-shipping-banner" aria-label="Información de envío gratis" id="whyChooseBtn">
             <div class="container">
                 <div class="compact-shipping-content">
-                    <!-- Texto fijo ENVÍO GRATIS -->
                     <div class="shipping-fixed">
-                        <i class="fas fa-shipping-fast" aria-hidden="true"></i>
-                        <span>ENVÍO GRATIS</span>
+                        <i class="fas fa-star" aria-hidden="true"></i>
+                        <span>¿Por qué elegir El Oso?</span>
                     </div>
                     
-                    <!-- Información en desplazamiento -->
                     <div class="shipping-scroll-container">
                         <div class="shipping-scroll-content">
                             <div class="scroll-item">
-                                <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
-                                <span>Quilmes y Zonas Aledañas</span>
+                                <i class="fas fa-award" aria-hidden="true"></i>
+                                <span>Calidad Premium</span>
                             </div>
                             <div class="scroll-item">
-                                <i class="fas fa-calendar-alt" aria-hidden="true"></i>
-                                <span>Jueves y Viernes</span>
+                                <i class="fas fa-shipping-fast" aria-hidden="true"></i>
+                                <span>Envío Express</span>
                             </div>
                             <div class="scroll-item">
-                                <i class="fas fa-tag" aria-hidden="true"></i>
-                                <span>Compra Mínima: $15.000</span>
+                                <i class="fas fa-hand-holding-usd" aria-hidden="true"></i>
+                                <span>Precios Imbatibles</span>
                             </div>
                             <div class="scroll-item">
-                                <i class="fas fa-clock" aria-hidden="true"></i>
+                                <i class="fas fa-headset" aria-hidden="true"></i>
+                                <span>100% Natural</span>
+                            </div>
+                            <div class="scroll-item">
+                                <i class="fas fa-leaf" aria-hidden="true"></i>
+                                <span>Combos Exclusivos</span>
+                            </div>
+                            <div class="scroll-item">
+                                <i class="fas fa-gift" aria-hidden="true"></i>
                                 <span id="compactShippingCountdown">Próximo envío: 00:00:00</span>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- ¿Por qué elegir El Oso? -->
-        <section class="why-choose-button-section">
-            <div class="container">
-                <div class="why-choose-btn-wrapper">
-                    <button class="why-choose-btn temu-style-btn" id="whyChooseBtn">
-                        <i class="fas fa-star" aria-hidden="true"></i>
-                        <span>¿POR QUÉ ELEGIR EL OSO?</span>
-                        <i class="fas fa-chevron-right" aria-hidden="true"></i>
-                    </button>
                 </div>
             </div>
         </section>
@@ -314,7 +307,7 @@
                     </div>
                 </div>
                 
-                <div class="products-grid flash-grid" id="flash-products">
+                <div class="products-grid" id="flash-products">
                     <div class="loading-products">
                         <i class="fas fa-spinner fa-spin" aria-hidden="true"></i>
                         <p>Cargando ofertas...</p>
@@ -826,6 +819,6 @@
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
 
-    <script src="scripts.min.js?v=9"></script>
+    <script src="scripts.js?v=10"></script>
 </body>
 </html>
