--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta name="ICBM" content="-34.720, -58.258">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.min.css?v=12">
+    <link rel="stylesheet" href="styles.min.css?v=13">
 
     <!-- Preload -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -496,7 +496,7 @@
                 </div>
                 <div class="stepper-step" data-step="2">
                     <div class="step-number">2</div>
-                    <span class="step-label">Cliente</span>
+                    <span class="step-label">Entrega</span>
                 </div>
                 <div class="stepper-step" data-step="3">
                     <div class="step-number">3</div>
@@ -578,6 +578,23 @@
                                 <i class="fas fa-truck"></i>
                                 Información de Entrega
                             </h3>
+
+                            <div class="shipping-info-card">
+                                <div class="shipping-info-details">
+                                    <div class="shipping-detail-item">
+                                        <i class="fas fa-calendar-alt"></i>
+                                        <span><strong>Jueves y Viernes</strong> - Envío gratis en compras > $15.000</span>
+                                    </div>
+                                    <div class="shipping-detail-item">
+                                        <i class="fas fa-clock"></i>
+                                        <span>Entrega en <strong>24-48hs</strong></span>
+                                    </div>
+                                    <div class="shipping-detail-item">
+                                        <i class="fas fa-map-marker-alt"></i>
+                                        <span>Zona de cobertura: <strong>Quilmes, Bernal, Ezpeleta y alrededores</strong></span>
+                                    </div>
+                                </div>
+                            </div>
 
                             <div class="form-row">
                                 <div class="form-group">
@@ -1006,6 +1023,6 @@
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
 
-    <script src="scripts.min.js?v=12"></script>
+    <script src="scripts.min.js?v=13"></script>
 </body>
 </html>
