--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <meta name="ICBM" content="-34.720, -58.258">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.min.css?v=14">
+    <link rel="preload" href="styles.css?v=14" as="style">
+    <link rel="stylesheet" href="styles.css?v=14">
 
     <!-- Preload -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -718,7 +719,7 @@
                             </button>
                             <button class="confirm-order-btn" id="confirmOrderBtn">
                                 <i class="fab fa-whatsapp"></i>
-                                Confirmar Pedido por WhatsApp
+                                Confirmar
                             </button>
                         </div>
                     </div>
@@ -1013,6 +1014,6 @@
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
 
-    <script src="scripts.min.js?v=14"></script>
+    <script src="scripts.js?v=14"></script>
 </body>
 </html>
